--- a/index.html
+++ b/index.html
@@ -1,17 +1,35 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="description" content="This is the Online Portfolio of Charan Epuri">
-    <meta name="keywords" content="accessibility, software engineer, frontend devlopemnt, backend development, react, java, javascript">
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Charan Epuri | Portfolio</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="description" content="This is the Online Portfolio of Charan Epuri">
+  <meta name="keywords"
+    content="accessibility, software engineer, frontend devlopemnt, backend development, react, java, javascript">
+  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Charan Epuri | Portfolio</title>
+
+  <!-- Open Graph -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://charan-epuri.dev/">
+  <meta property="og:title" content="Charan Epuri | Portfolio">
+  <meta property="og:description"
+    content="Frontend-focused Full Stack Developer with 5+ years of expertise in React, Java, Spring Boot, and end-to-end WordPress">
+  <meta property="og:image" content="https://charan-epuri.dev/assets/pencilSketchProfilePicture.webp">
+
+  <!-- Open Graph (for WhatsApp, LinkedIn, Outlook) -->
+<meta property="og:title" content="Charan Epuri | Portfolio">
+<meta property="og:description" content="Frontend-focused Full Stack Developer with 5+ years of expertise in React, Java, Spring Boot, and end-to-end WordPress.">
+<meta property="og:image" content="https://charan-epuri.dev/assets/pencilSketchProfilePicture.webp">
+<meta property="og:url" content="https://charan-epuri.dev/">
+<meta property="og:type" content="website">
+<meta property="og:site_name" content="Charan Epuri Portfolio">
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.jsx"></script>
+</body>
+
 </html>
-
-
