--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
   <meta property="og:title" content="Charan Epuri | Portfolio">
   <meta property="og:description"
     content="Frontend-focused Full Stack Developer with 5+ years of expertise in React, Java, Spring Boot, and end-to-end WordPress">
-  <meta property="og:image" content="https://charan-epuri.dev/assets/pencilSketchProfilePicture.webp">
+  <meta property="og:image" content="https://charan-epuri.dev/assets.pencilSketchProfilePicture-DxkoyUVs.webp">
 
   <!-- Open Graph (for WhatsApp, LinkedIn, Outlook) -->
 <meta property="og:title" content="Charan Epuri | Portfolio">
 <meta property="og:description" content="Frontend-focused Full Stack Developer with 5+ years of expertise in React, Java, Spring Boot, and end-to-end WordPress.">
-<meta property="og:image" content="https://charan-epuri.dev/assets/pencilSketchProfilePicture.webp">
+<meta property="og:image" content="https://charan-epuri.dev/assets.pencilSketchProfilePicture-DxkoyUVs.webp">
 <meta property="og:url" content="https://charan-epuri.dev/">
 <meta property="og:type" content="website">
 <meta property="og:site_name" content="Charan Epuri Portfolio">
